# tf-grpo

./: .gitignore  CLAUDE.md  HARNESS.md  README.md  command_center.py  pyproject.toml
.agents/skills/g-kade/: SKILL.md  SKILL.md.tmpl
.claude/: settings.json
.claude/agents/: config-reviewer.md
.claude/hooks/: protect_generated_paths.py  verify_python_edit.py
.claude/skills/run-experiment/: SKILL.md
configs/agents/practice/: market_agent.yaml  math_agent.yaml  web_agent.yaml
configs/eval/market/: web_market_research.yaml
configs/eval/math/: math_AIME24.yaml  math_practice_AIME24.yaml
configs/eval/web/: web.yaml  web_practice.yaml
configs/practice/: math_reasoning.yaml  web_market_research.yaml  web_search.yaml
docs/harness/: index.md
examples/: kalshi_market_corpus.jsonl  toy_market_eval.jsonl  toy_market_train.jsonl  toy_math_eval.jsonl  toy_math_train.jsonl  toy_web_eval.jsonl  toy_web_train.jsonl
scripts/: check_harness_freshness.py  run_eval.py  run_training_free_GRPO.py
training_free_grpo/: __init__.py  config.py  eval.py  experience.py  llm.py  policy.py  practice.py  prompts_math.py  prompts_web.py  tools.py  utils.py  verify.py
